css/style.css
/* ... */
@media (max-width:767px){
	.navbar-brand{height:70%;}
	.navbar-brand img{ max-width:70%;}
	.navbar-header button{margin-top:30px;}
	.navbar-nav{margin:0;}
	
	.only-mobile{display:block;}
	.img-laptop{margin:20px 0;}
	.bannerinsidepage p{ position:static; text-align:center;  transform:translate(0,0); font-size:16px; line-height:22px; color:#fff; text-shadow: 0px 0px 0px rgba(0, 0, 0, 1);  background:#000; text-align:left; padding:10px 20px;}
	.side-ad{ margin:0 auto;}
	.press img{ float:none; margin-right:0px;  margin-bottom:10px;}
	.press img:nth-child(4), .press img:nth-child(5){margin-top:-45px;}
	
	.buttons{max-width:90%; margin:0 auto;}
	.get-in-touch, .pay-now,.support, .webinar{ width:24%; min-height:90px; padding:15px; border-radius:0;  position:static; z-index:9;  overflow:visible; transition: all 0.25s ease-out;-webkit-transition: all 0.25s ease-out; -o-transition: all 0.25s ease-out; -moz-transition: all 0.25s ease-out; display:inline-block; margin:0 0 3px 0 !important;}
	.webinar{margin:0;}


.content-inside .heading h1, .content-inside .heading ul{float:none !important; display:block;}	

.get-in-touch img, .pay-now img, .support img, .webinar img{ position:static; display:block; padding-bottom:10px; margin:0 auto; margin-top:0px;}
.get-in-touch p, .pay-now p, .support p, .webinar p{position:static; display:block; text-transform:uppercase; font-size:11px !important;}
.get-in-touch a, .pay-now a, .support a, .webinar a { cursor:pointer;}
.get-in-touch a p, .pay-now a p, .support a p, .webinar a p{color:#fff;  text-align:center !important;}
.get-in-touch:hover, .pay-now:hover, .support:hover, .webinar:hover{width:24% !important; display:inline-block !important; border-radius:0;  min-height:90px !important; overflow:visible;} 	
.get-in-touch:hover p, .pay-now:hover p, .support:hover p, .webinar:hover p{display:block; opacity:1;}
.btn-custom{ margin-top:20px;}
.advanced-get-content{padding:0; border:0;}	
#ytplayer{display:none;}

.ta-banner-content{padding-left:25px;}
.ta-banner-content h3{font-size:16px; line-height:18px; padding-bottom:0px;}
.ta-banner-content h4{ font-size:14px; line-height:16px; padding-bottom:5px;}
.ta-banner-content h5, .ta-banner-content h5 strong{ color:#fff !important; font-weight:bold; font-size:12px; line-height:16px; padding-top:0px;}		


	
}

@media (max-width:640px){

	
}

@media (max-width:480px){
.ta-banner-content{padding-left:25px;}
.ta-banner-content h3{font-size:12px; line-height:16px; padding-bottom:3px;}
.ta-banner-content h4{ display:none;}
.ta-banner-content h5, , .ta-banner-content h5 strong{ color:#fff !important; font-weight:bold; font-size:10px; line-height:12px; padding-top:0px;}	
.ta-banner-content h5 span{display:none;}
img.side-logos{display:block; float:none !important; margin:10px 0;}
	
}

@media (max-width:340px){
.ta-banner{display:none;}
.ta-banner-content{padding:0 25px; display:none;}
.ta-banner-content h3{display:none;}
.ta-banner-content h5{ color:#fff !important; font-weight:bold; font-size:12px; line-height:14px; padding-top:0px;}	
.ta-banner-content h5 span{display:none;}
	
}

